Implemented receipt service and PDF generation, generating a html template of the receipt and populating it with data from the order and user. Implemented a new PDF generation exception and an exception handler to handle that exception. Implemented a EmailService to send emails with the pdf using gmail and html to construct the email body. Implemented FindByIdFunction interface that uses generic optional for finding something by Id, then i implemented a RepositoryUtils class that uses that generic fetch to pass in a generic repository, id and generic class to find entities, if no entities are found a generic error message is constructed using the generic class name. Refactored almost all service classes to use findEntityById. Implemented course Enrollments service and endpoints / controller to fetch enrollments and enrollment history. Implemented ApplicationContextProvider to fetch beans avoiding circular dependencies. Fixed a bug in security checks for creating and updating a course by provider user. Implemented new endpoints for searching for a given course, topic and category. Populated dummy data with users, and provider users. Implemented a toPascalCase method in StringUtils to make input string into Pascal Case, updated pom and env files. Wrote javadoc and swagger doc